Fixed: removed overflows for now

--- a/public/neumeeditor/static/neumeeditor/css/neumeeditor.css
+++ b/public/neumeeditor/static/neumeeditor/css/neumeeditor.css
@@ -5,17 +5,17 @@ body, html {
 #container {
     height: 100%;
     padding: 0;
-    overflow-y: hidden;
+    /*overflow-y: hidden;*/
 }
 
 .name-editor {
     height: 100%;
-    overflow-y: scroll;
+    /*overflow-y: scroll;*/
 }
 
 .image-editor {
     height: 100%;
-    overflow-y: scroll;
+    /*overflow-y: scroll;*/
 }
 
 .dropzone {
